# ebmb

./: .gitignore  .zenodo.json  Makefile  README  README.md  README.txt  critical.f90  dos.f90  eb_local.py  ebmb.f90  ebmb.py  eliashberg.f90  example.in  filenames.f90  global.f90  integration.f90  interface.py  intervals.f90  io.f90  main.f90  makefile  manual.tex  mcmillan.f90  pade.f90  pyproject.toml  realaxis.f90  setup.py  tc.f90
bisection/: critical.f90  tc.f90
eliashberg/: constant_dos.f90  eigenvalue.f90  eigenvalue_cdos.f90  self_energy.f90  self_energy_cdos.f90  spectral_function.f90  variable_dos.f90
examples/: Makefile  a2f.py  dos.py  gap.py  realgw.py  residue.py  selfen.py  specfun.py
io/: arguments.f90  formatting.f90  load.f90  store.f90  store_data.f90  store_text.f90  tell.f90
logo/: Makefile  ebmb.tex  logo.sh  optimize.py
manual/: Makefile  conf.py  ebmb.tex  index.rst  manual.rst  module.rst  style.css
manual/examples/: dos.rst  gap.rst  realgw.rst  residue.rst  selfen.rst  specfun.rst
programs/: critical.f90  ebmb.f90  tc.f90
real_axis/: dos.f90  pade.f90  real_axis.f90
src/: critical.f90  dos.f90  ebmb.f90  eigenvalues.f90  eliashberg_eigenvalue.f90  eliashberg_eigenvalue_cdos.f90  eliashberg_self_energy.f90  eliashberg_self_energy_cdos.f90  eliashberg_self_energy_real_axis.f90  eliashberg_spectral_function.f90  formatting.f90  global.f90  globals.f90  io_load.f90  io_store.f90  io_tell.f90  pade.f90  real_axis.f90  tc.f90  tools.f90
universal/: eigenvalues.f90  formatting.f90  global.f90  lapack.f90  tools.f90
(+2 files in other folders)
