[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "ebmb"
dynamic = ["version"]
authors = [{name = "Jan Berges"}]
description = "Solve multiband Eliashberg equations"
readme = "README.md"
license = {file = "LICENSE"}
urls = {Homepage = "https://bitbucket.org/berges/ebmb"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
]
requires-python = ">=2.7"
